<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app1"
    tools:context=".Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="26dp"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_inicio_1"
            android:textAllCaps="true"
            android:textSize="38dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_inicio_2"
            android:textAllCaps="true"
            android:textSize="38dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/txt_inicio_3"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_cir"
                />
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/txt_inicio_4"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginLeft="300dp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="next >"
                android:id="@+id/nextbtn"
                android:textColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />
        </FrameLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_ds"
            />
    </LinearLayout>

</ScrollView>