<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app1"
    tools:context=".HomeFrame"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="26dp"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_home_1"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_home_2"
            android:textSize="20dp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/txt_home_3"
            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusTopStart="27dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"

                app:startIconDrawable="@drawable/cir"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="200dp"
                app:cardCornerRadius="22dp"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardPreventCornerOverlap="true"
                app:cardBackgroundColor="@color/color_app2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background" />

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_width="170dp"
                android:layout_height="200dp"
                app:cardCornerRadius="22dp"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardPreventCornerOverlap="true"
                app:cardBackgroundColor="@color/color_app2">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background"/>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="100dp"
                android:layout_marginRight="110dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_home_4"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="150dp"
                app:cardCornerRadius="22dp"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardPreventCornerOverlap="true"
                app:cardBackgroundColor="@color/color_app2">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background"/>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>